--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     .layout {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; /* 3 kolom */
+  grid-template-columns: 1fr 1fr 1fr; /* kolom tengah lebih fleksibel */
   gap: 22px;
 }
 
@@ -175,7 +175,11 @@
     .notify { position: fixed; top: 20px; right: 20px; background:#4caf50; color:white; padding:12px 16px; border-radius:10px; box-shadow:0 6px 15px rgba(0,0,0,0.15); opacity:0; transform:translateY(-10px); transition:0.2s ease; z-index:9999 }
     .notify.show { opacity:1; transform:translateY(0) }
 
-    @media(max-width:900px) { .layout { flex-direction:column } .left{ width:100% } .right{ width:100% } }
+    @media(max-width:900px) {
+  .layout {
+    grid-template-columns: 1fr; /* tumpuk vertikal */
+  }
+}
 
     .loadingSpinner {
   position: absolute;
@@ -279,16 +283,20 @@
 
 
 .actionButtons {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 18px;
+  width: 100%;
   margin-top: 10px; /* jarak tetap */
 }
 
 /* tombol kuning */
 .btnAction {
-  width: 210px;
-  height: 140px;
+  width: 100%;             /* fleksibel mengikuti parent */
+  height: auto;            /* tidak fix */
+  padding: 20px 12px;      /* jaga proporsi */
+  aspect-ratio: 1.4 / 1;   /* bentuk tetap kotak-proporsional */
+
   background: #F9D24D;
   border: none;
   border-radius: 18px;
@@ -301,8 +309,9 @@
   gap: 8px;
   transition: transform .15s, background .15s;
 
-  position: relative;   /* 🔥 WAJIB supaya spinner bisa center */
+  position: relative;   /* tetap untuk spinner */
 }
+
 
 /* lingkaran icon putih */
 .btnAction .icon {
