--- a/index.html
+++ b/index.html
@@ -358,6 +358,30 @@ p, div, span, label, button {
   line-height: 1.15;
 }
 
+    /* ===============================
+   RAPATKAN KOLOM: NAMA - WA - TANGGAL
+   (KHUSUS .field DATA MEMBER)
+   =============================== */
+
+/* Perkecil tinggi box tiap field */
+.middle .field {
+  padding: 8px 12px !important;   /* sebelumnya 12px 16px */
+  margin-bottom: 8px !important; /* sebelumnya 14px */
+}
+
+/* Perkecil jarak label ke value */
+.middle .field .label {
+  font-size: 10px;     /* sebelumnya 11px */
+  letter-spacing: 0.5px;
+  margin-bottom: 2px;
+}
+
+/* Perkecil jarak atas teks value */
+.middle .field .value {
+  margin-top: 2px !important;  /* sebelumnya 6px */
+  font-size: 17px;             /* sebelumnya 18px (opsional) */
+}
+
 
   </style>
 </head>
@@ -1028,6 +1052,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
