--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@ body {
    =============================== */
 
 .searchWrap {
-  margin-top: 0 !important;
-  margin-bottom: 12px !important;
+  padding: 12px !important;   /* mengecilkan tinggi background biru */
+  margin-bottom: 14px !important;
 }
 
 .search {
@@ -1079,6 +1079,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
