--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@ body {
    =============================== */
 
 .searchWrap {
-  padding: 12px !important;   /* mengecilkan tinggi background biru */
+  padding: 6px 6px !important;   /* mengecilkan tinggi background biru */
   margin-bottom: 14px !important;
 }
 
 .search {
-  padding: 8px 12px !important;
+  padding: 5px 5px !important;
   min-height: unset !important;
 }
 
@@ -1079,6 +1079,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
