--- a/index.html
+++ b/index.html
@@ -364,6 +364,73 @@
   font-size: 14px !important;
 }
 
+    /* ==========================================
+   PROPORTIONAL COMPACT MODE (SEIRAMA SEARCH)
+   ========================================== */
+
+/* 1. SEMUA KOLOM PUTIH DIPENDEKKAN */
+.left, .middle, .right {
+  padding-top: 16px !important;
+  padding-bottom: 16px !important;
+}
+
+/* 2. JARAK ANTAR KOLOM DIRAPATKAN */
+.main {
+  gap: 18px !important;
+}
+
+/* 3. HEADER BIRU (DATA & STATISTIK) DIPENDEKKAN */
+.title {
+  padding: 10px 18px !important;
+  margin-bottom: 12px !important;
+  font-size: 18px !important;
+  border-radius: 14px !important;
+}
+
+/* 4. BOX FIELD (NAMA, WA, TANGGAL, DLL) LEBIH RINGKAS */
+.field {
+  padding: 9px 14px !important;
+  margin-bottom: 8px !important;
+  border-radius: 12px !important;
+}
+
+/* 5. LABEL & VALUE TETAP JELAS TAPI PADAT */
+.label {
+  font-size: 10px !important;
+  margin-bottom: 2px !important;
+  letter-spacing: 0.4px;
+}
+
+.value {
+  font-size: 16px !important;
+  margin-top: 2px !important;
+}
+
+/* 6. TOMBOL AKSI LEBIH RINGKAS TAPI TETAP BESAR */
+.actions {
+  margin-top: 12px !important;
+  gap: 14px !important;
+}
+
+.action-btn {
+  padding: 14px 12px !important;
+  border-radius: 16px !important;
+}
+
+.action-btn span {
+  font-size: 14px !important;
+}
+
+/* 7. KOLOM FOTO LEBIH IDEAL TINGGINYA */
+.left {
+  min-height: 520px !important;
+}
+
+.left img {
+  object-fit: cover;
+  border-radius: 18px;
+}
+
   </style>
 </head>
 <body>
@@ -1033,6 +1100,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
