--- a/index.html
+++ b/index.html
@@ -364,72 +364,75 @@
   font-size: 14px !important;
 }
 
-    /* ==========================================
-   PROPORTIONAL COMPACT MODE (SEIRAMA SEARCH)
+ /* ==========================================
+   FINAL SUPER COMPACT MODE
+   TARGET: 3 KOLOM SETINGGI GARIS HITAM
    ========================================== */
 
-/* 1. SEMUA KOLOM PUTIH DIPENDEKKAN */
+/* 1. SEMUA KOLOM (FOTO, DATA, STATISTIK) */
 .left, .middle, .right {
-  padding-top: 16px !important;
-  padding-bottom: 16px !important;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  min-height: unset;
 }
 
-/* 2. JARAK ANTAR KOLOM DIRAPATKAN */
-.main {
-  gap: 18px !important;
-}
-
-/* 3. HEADER BIRU (DATA & STATISTIK) DIPENDEKKAN */
+/* 2. HEADER BIRU (DATA & STATISTIK) */
 .title {
-  padding: 10px 18px !important;
-  margin-bottom: 12px !important;
-  font-size: 18px !important;
-  border-radius: 14px !important;
+  padding: 7px 14px;
+  margin-bottom: 6px;
+  font-size: 16.5px;
+  border-radius: 12px;
 }
 
-/* 4. BOX FIELD (NAMA, WA, TANGGAL, DLL) LEBIH RINGKAS */
+/* 3. FIELD DATA (NAMA, WA, TGL, DLL) */
 .field {
-  padding: 9px 14px !important;
-  margin-bottom: 8px !important;
-  border-radius: 12px !important;
+  padding: 6px 10px;
+  margin-bottom: 5px;
+  border-radius: 10px;
 }
 
-/* 5. LABEL & VALUE TETAP JELAS TAPI PADAT */
 .label {
-  font-size: 10px !important;
-  margin-bottom: 2px !important;
-  letter-spacing: 0.4px;
+  font-size: 10px;
+  margin-bottom: 1px;
 }
 
 .value {
-  font-size: 16px !important;
-  margin-top: 2px !important;
+  font-size: 15px;
+  margin-top: 1px;
 }
 
-/* 6. TOMBOL AKSI LEBIH RINGKAS TAPI TETAP BESAR */
+/* 4. AKSI MEMBER (TOMBOL KUNING) */
 .actions {
-  margin-top: 12px !important;
-  gap: 14px !important;
+  margin-top: 8px;
+  gap: 10px;
 }
 
 .action-btn {
-  padding: 14px 12px !important;
-  border-radius: 16px !important;
+  padding: 10px 10px;
+  border-radius: 14px;
 }
 
 .action-btn span {
-  font-size: 14px !important;
+  font-size: 13px;
 }
 
-/* 7. KOLOM FOTO LEBIH IDEAL TINGGINYA */
+/* 5. KOLOM FOTO DIPAKSA IKUT PENDEK */
 .left {
-  min-height: 520px !important;
+  max-height: 460px;
 }
 
 .left img {
   object-fit: cover;
-  border-radius: 18px;
+  max-height: 100%;
 }
+
+/* 6. RIWAYAT TERAKHIR */
+.riwayat {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  margin-top: 6px;
+}
+ 
 
   </style>
 </head>
@@ -1100,6 +1103,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
