--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 .sectionTitle {
   background: #06A7FF;
   color: white;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 700;
   text-align: center;
-  padding: 14px 0;
+  padding: 8px 0;
   border-radius: 12px;
-  margin-bottom: 22px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
@@ -122,14 +122,47 @@
     #memberAvatar { width:100%; height:230px; background:#fdf6e8; border-radius:14px; overflow:hidden; display:flex; align-items:center; justify-content:center; margin-bottom:18px }
     #memberAvatar img { width:100%; height:100%; object-fit:cover }
 
-    .field { background:#E5F4FF; border-radius:12px; padding:12px 16px; margin-bottom:14px; border:1px solid #faf0dd; text-align:center; box-shadow:0 4px 14px rgba(0,0,0,0.05) }
-    .field .label { font-size:11px;color:#888; letter-spacing:1px }
-    .field .value { font-size:18px; font-weight:700; margin-top:6px }
+    .field {
+  background:#E5F4FF;
+  border-radius:10px;
+  padding:8px 12px;     /* DIPERKECIL */
+  margin-bottom:8px;   /* DIPERDEKAT */
+  border:1px solid #faf0dd;
+  text-align:center;
+  box-shadow:0 2px 8px rgba(0,0,0,0.05)
+}
 
-    .statGrid { display:grid; grid-template-columns:1fr 1fr; gap:14px; margin-bottom:22px }
-    .statCard { background:#E5F4FF; padding:16px; border-radius:12px; border:1px solid #edf2ff; box-shadow:0 6px 14px rgba(0,0,0,0.06) }
-    .k { font-size:12px; color:#666 }
-    .v { font-size:16px; font-weight:700; margin-top:8px }
+.field .label {
+  font-size:10px;      /* DIPERKECIL */
+  color:#888;
+  letter-spacing:0.5px
+}
+
+.field .value {
+  font-size:15px;      /* DIPERKECIL */
+  font-weight:700;
+  margin-top:3px
+}
+
+    .statGrid {
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:8px;            /* DIPERKECIL */
+  margin-bottom:12px
+}
+
+.statCard {
+  background:#E5F4FF;
+  padding:10px;      /* DIPERKECIL */
+  border-radius:10px;
+  border:1px solid #edf2ff;
+  box-shadow:0 3px 8px rgba(0,0,0,0.06)
+}
+
+.k { font-size:11px; color:#666 }
+
+.v { font-size:14px; font-weight:700; margin-top:4px }
+
 
     .actions { background:#fff; border-radius:12px; padding:14px; border:1px solid #edf5ff; box-shadow:0 6px 14px rgba(0,0,0,0.06) }
     .actionRow { display:flex; gap:12px; margin-top:10px }
@@ -223,11 +256,12 @@
 
 #memberAvatar {
   width: 100%;
-  height: 540px;
+  height: 380px;          /* ✅ DIPENDEKKAN dari 540px */
   background: white;
   border-radius: 14px;
   overflow: hidden;
-  position: relative;      /* penting untuk spinner di tengah */
+
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -267,15 +301,15 @@
 }
 
 .actionTitle {
-  margin-top: 40px;
-  text-align: center;   /* 🔥 ini yang membuat tulisan berada di tengah */
-  font-size: 20px;
+  margin-top: 14px;   /* DIPENDEKKAN */
+  text-align: center;
+  font-size: 16px;
   font-weight: 700;
   background: #06A7FF;
   color: white;
-  padding: 12px;
-  border-radius: 12px;
-  margin-bottom: 16px;
+  padding: 8px;
+  border-radius: 10px;
+  margin-bottom: 8px;
 }
 
 
@@ -289,24 +323,26 @@
 
 /* tombol kuning */
 .btnAction {
-  width: 100%;             /* fleksibel mengikuti parent */
-  height: auto;            /* tidak fix */
-  padding: 20px 12px;      /* jaga proporsi */
-  aspect-ratio: 1.4 / 1;   /* bentuk tetap kotak-proporsional */
+  width: 100%;
+  height: auto;
+
+  padding: 12px 8px;        /* ✅ DIPERKECIL (dari 20px) */
+  aspect-ratio: 1.15 / 1;  /* ✅ LEBIH TEGAK (tidak terlalu tinggi) */
 
   background: #F9D24D;
   border: none;
-  border-radius: 18px;
+  border-radius: 14px;     /* ✅ Lebih kecil */
   cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 8px rgba(0,0,0,0.12);
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 8px;
-  transition: transform .15s, background .15s;
+  gap: 5px;                /* ✅ Jarak ikon & teks dirapatkan */
 
-  position: relative;   /* tetap untuk spinner */
+  transition: transform .12s, background .12s;
+  position: relative;
 }
 
 
@@ -363,116 +399,6 @@
   padding: 0 16px !important;
   font-size: 14px !important;
 }
-
-/* ================================
-   COMPACT UI FINAL - OVERRIDE FIX
-   ================================ */
-
-/* HEADER BIRU (DATA, STATISTIK, AKSI) */
-.title,
-.header-title,
-.section-title {
-  padding: 6px 12px !important;
-  font-size: 15px !important;
-  border-radius: 12px !important;
-  margin-bottom: 6px !important;
-}
-
-/* KOLOM PUTIH UTAMA (FOTO, DATA, STATISTIK) */
-.left, .middle, .right {
-  padding-top: 8px !important;
-  padding-bottom: 8px !important;
-  min-height: unset !important;
-}
-
-/* FIELD DATA MEMBER */
-.field {
-  padding: 6px 10px !important;
-  margin-bottom: 6px !important;
-  border-radius: 10px !important;
-}
-
-.label {
-  font-size: 10px !important;
-  margin-bottom: 2px !important;
-}
-
-.value {
-  font-size: 14px !important;
-  line-height: 1.2 !important;
-}
-
-/* JARAK ANTAR KOLOM AGAR LEBIH RAPAT */
-.main-grid,
-.main,
-.container-grid {
-  gap: 12px !important;
-}
-
-/* ================================
-   STATISTIK MEMBER (DIKECILKAN)
-   ================================ */
-
-.stat-box,
-.stat-item,
-.statistik-box {
-  padding: 8px 10px !important;
-  border-radius: 12px !important;
-  min-height: 58px !important;
-}
-
-.stat-box .label,
-.stat-item .label {
-  font-size: 11px !important;
-}
-
-.stat-box .value,
-.stat-item .value {
-  font-size: 14px !important;
-}
-
-/* ================================
-   RIWAYAT TERAKHIR DIPENDEKKAN
-   ================================ */
-
-.riwayat,
-.riwayat-box {
-  margin-top: 6px !important;
-  padding: 8px 10px !important;
-  font-size: 13px !important;
-}
-
-/* ================================
-   AKSI MEMBER DIPERKECIL
-   ================================ */
-
-.actions {
-  margin-top: 8px !important;
-  gap: 10px !important;
-}
-
-.action-btn {
-  padding: 10px !important;
-  border-radius: 14px !important;
-}
-
-.action-btn span {
-  font-size: 13px !important;
-}
-
-/* ================================
-   FOTO AGAR TIDAK MENARIK KE BAWAH
-   ================================ */
-
-.left {
-  max-height: 430px !important;
-}
-
-.left img {
-  max-height: 100% !important;
-  object-fit: cover !important;
-}
-
 
   </style>
 </head>
@@ -1143,6 +1069,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
