--- a/index.html
+++ b/index.html
@@ -716,11 +716,12 @@ function showMemberLoading() {
     renderHistory(m.last4 || m.last3 || []);
 }
 
-  function renderHistory(list) {
+ function renderHistory(list) {
   const box = document.getElementById('historyList');
   box.innerHTML = '';
+
   if (!list.length) { 
-    box.innerHTML = '<div style="font-size:12px;color:#777">Tidak ada riwayat</div>'; 
+    box.innerHTML = '<div style="font-size:11px;color:#777">Tidak ada riwayat</div>'; 
     return; 
   }
 
@@ -728,16 +729,18 @@ function showMemberLoading() {
     const div = document.createElement('div');
     div.className = 'historyItem';
 
-    div.style.marginBottom = '6px';      // ✅ JARAK ANTAR ITEM DIPERKECIL
-    div.style.fontSize = '12px';         // ✅ FONT DIPERKECIL
-    div.style.lineHeight = '1.3';        // ✅ BARIS DIRAPATKAN
+    // ✅ PENGECILAN MAKSIMAL AMAN
+    div.style.marginBottom = '3px';     // sebelumnya 6px → sekarang 3px
+    div.style.fontSize = '11px';        // sebelumnya 12px → sekarang 11px
+    div.style.lineHeight = '1.15';      // sebelumnya 1.3 → sekarang 1.15
+    div.style.padding = '2px 0';        // rapat atas bawah
 
     div.innerHTML =
-      '<div style="font-weight:600;font-size:13px">' +
-      (i+1) + '. ' + safe(it.aksi) + 
+      '<div style="font-weight:600;font-size:12px; margin-bottom:1px">' +
+        (i+1) + '. ' + safe(it.aksi) + 
       '</div>' +
-      '<div style="color:#777;font-size:11px">' +
-      safe(it.timestamp) + ' — Jumlah: ' + (it.jumlah||0) + 
+      '<div style="color:#777;font-size:10px; line-height:1.1">' +
+        safe(it.timestamp) + ' — Jumlah: ' + (it.jumlah||0) + 
       '</div>';
 
     box.appendChild(div);
@@ -1088,6 +1091,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
