--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
 .left {
   background: #06A7FF;
-  padding: 20px;
-  border-radius: 20px;
+  padding: 6px;          /* ✅ FRAME JADI TIPIS SEPERTI SEARCH BAR */
+  border-radius: 16px;  /* ✅ sedikit diringkas */
   width: 100%;
 }
 
@@ -1086,6 +1086,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
